# ComfyUI-Aiya-MMX

./: README.md  __init__.py  check_watermark.py  date_variable.py  pyproject.toml  register.py  requirements.txt  video_adapter.py  watermark_util.py
example_workflows/: Prompt-TI2T2V_DMXAPI.json  TTS_MinMax_speech_26hd_DMXAPI.json  example_workflows_Aiya_mmx.json  gpt_5_img2text_260128.json  img_BaiduAir_DMXAPI.json  img_Z_image_turbo-t2i-img-Aiya_mmx.json  img_banana_pro-Aiya_mmx.json  img_banana_pro_DMXAPI.json  img_qwen_img_edit_2509-Aiya_mmx.json  img_qwen_img_edit_2509-Aiya_mmxjson  img_seedream45_DMXAPI.json  infinitetalk-4090-251212-2.json  modelscope_api-260203.json  string_tools_Aiya_mmx.json  video_Seedance15Pro_DMXAPI_260129.json  video_hunyuan_video_1.5_t2v_Aiya_mmx.json  video_wan2_2_14B_Aiya_mmx.json
nodes/: Aiya_mmx-VideoToPath.py  Aiya_mmx_BaiduAir_DMX.py  Aiya_mmx_DownloadVideo.py  Aiya_mmx_Hailuo-2_3-DMX.py  Aiya_mmx_Hailuo23-T2V-DMX.py  Aiya_mmx_Hailuo23_I2V_DMX.py  Aiya_mmx_Hailuo23_T2V_DMX.py  Aiya_mmx_JoinStrings.py  Aiya_mmx_NanoBanana_Pro_DMX.py  Aiya_mmx_NanoBanana_Pro_DMX_Auto.py  Aiya_mmx_SplitString.py  Aiya_mmx_VideoPromptOptimizer_DMX.py  Aiya_mmx_minimax_tts_DMX.py  Aiya_mmx_minimax_tts_multichar_DMX.py  Aiya_mmx_seedream45_DMX.py  Aiya_mmx_seedream4_5_DMX.py  Hailuo23_DMX.py  MMX-nodes_image_save_jpg.py  MMX_nodes_simple_prompt.py  MMX_nodes_video_stable.py  MiniMax_TTS_API.py  NanoBanana_Pro_DMX.py  Seedance15Pro_DMX.py  Veo31_API.py  __init__.py  color_picker.py  gemini_API.py  img2pp_mmx.py  img_collect.py  img_tools.py  openai_API.py  (+4 more)
