[project]
name = "aiya-mmx"
version = "1.0.0"
description = "Aiya MMX series image nodes: watermark, resize, save, resolution one-click magic"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "MuAIGC", email = "hello@muai.gc"},
]
dependencies = [
    "torch",
    "torchvision",
    "opencv-python",
    "Pillow",
    "numpy",
]
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
]

[project.urls]
Repository    = "https://github.com/MuAIGC/ComfyUI-Aiya-MMX"
Documentation = "https://github.com/MuAIGC/ComfyUI-Aiya-MMX/wiki"
"Bug Tracker" = "https://github.com/MuAIGC/ComfyUI-Aiya-MMX/issues"

[tool.comfy]
PublisherId   = "MuAIGC"
DisplayName   = "Aiya MMX Series Nodes"
Icon          = "https://github.com/MuAIGC/ComfyUI-Aiya-MMX/blob/main/ComfyUI-Aiya-MMX-B.jpg"
requires-comfyui = ">=1.0.0"
